--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@ body{
   letter-spacing: .5px;
 }
 
+.ui.segment { overflow: auto }
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
